--- a/projects/projects.html
+++ b/projects/projects.html
@@ -52,16 +52,13 @@
 				</div>
 
       <div id="projects">
-
         <div class="project">
 
 
-
-
           <!-- Start Project -->
-          <h1>Talon Workshop</h1>
+          <h1>Talon HPC Workshop</h1>
           <span class="separator">|</span>
-          <span>Machine Learning - Neural Networks</span>
+          <span>Machine Learning - Neural Networks on Talon</span>
           <div class="meta">
             <span class="time">november 30, 2018</span>
             <span class="toolstack">|University of North Texas </span>GAB 535
@@ -83,15 +80,44 @@
             ><div class="github">
             <a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
             </div>
-            </div>
+          </div>
+					<br><br>
+					<!-- End Project -->
+
+					<!-- Start Project -->
+          <h1>Talon HPC Tutorial</h1>
+          <span class="separator">|</span>
+          <span>Using Python and Jupyter Notebooks on Talon</span>
+          <div class="meta">
+            <span class="time">may 1, 2019</span>
+            <span class="toolstack">|University of North Texas </span>DP F223
+          </div>
+
+          <div class="description">
+						<p></p>
+            <p>Hands on work on Talon UNT HPC</p>
+							<p>This workshop will go over some basic instruction about Python and
+								Jupyter Notebooks. We will learn how to see what libraries we have
+								available and how to install your own.Learn how to create a virtual
+								environment, and most exciting build a simple Neural Network model
+								to predict diabetes! All this on Talon!</p>
+          </div>
+
+          <!-- Project Links -->
+          <div class="links"id="links_3">
+            <div class="website">
+              <a href="talon_python_jupyter.html">view presentation</a>
+            </div
+            ><div class="github">
+            <a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
             </div>
           </div>
-          <!-- End Project -->
+					<br><br>
+					<!-- End Project -->
 
 
-
-
-
+          </div>
+        </div>
       </div>
 		</div>
 	</body>
