--- a/projects/projects.html
+++ b/projects/projects.html
@@ -115,6 +115,36 @@
 					<br><br>
 					<!-- End Project -->
 
+					<!-- Start Project -->
+					<h1>Talon HPC Tutorial</h1>
+					<span class="separator">|</span>
+					<span>Intro to Word Embeddings - NLP Tools on Talon</span>
+					<div class="meta">
+						<span class="time">may 12, 2019</span>
+						<span class="toolstack">|University of North Texas </span>DP F223
+					</div>
+
+					<div class="description">
+						<p></p>
+						<p>Natural Language Processing on Talon HPC</p>
+							<p>Ever wondered or curious about natural language processing?
+								How do you load a text file, how do you 'clean' it, how do you
+								make use of it? We will learn all that and at the end you will
+								build a Neural Network model that can predict a sentiment of a
+								Movie Review. All this on Talon!</p>
+					</div>
+
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="talon_word_emb_intro.html">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
+						</div>
+					</div>
+					<br><br>
+					<!-- End Project -->
 
           </div>
         </div>
