--- a/projects/projects.html
+++ b/projects/projects.html
@@ -55,34 +55,64 @@
         <div class="project">
 
 
-          <!-- Start Project -->
-          <h1>Talon HPC Workshop</h1>
-          <span class="separator">|</span>
-          <span>Machine Learning - Neural Networks on Talon</span>
-          <div class="meta">
-            <span class="time">november 30, 2018</span>
-            <span class="toolstack">|University of North Texas </span>GAB 535
-          </div>
-
-          <div class="description">
+					<!-- Start Project -->
+					<h1>Talon HPC Tutorial</h1>
+					<span class="separator">|</span>
+					<span>Intro to using Git Lab</span>
+					<div class="meta">
+						<span class="time">may 3, 2019</span>
+						<span class="toolstack">|University of North Texas </span>DP F285
+					</div>
+					<div class="description">
 						<p></p>
-            <p>What are Neural Networks, and why everyone is talking about them?</p>
-							<p>This workshop is meant to give a general overview of why Neural Networks and Deep
-							Learning are getting so much attention and help shed some light on how they work and what
-							applications are possible because of them.</p>
-          </div>
-
-          <!-- Project Links -->
-          <div class="links"id="links_3">
-            <div class="website">
-              <a href="deep_learning_workshop.html">view presentation</a>
-            </div
-            ><div class="github">
-            <a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
-            </div>
-          </div>
+						<p>How to use UNT HPC GitLab server</p>
+							<p>Ever wondered what is Git and why every software company uses
+								it? We'll teach some basic commands in Git Lab (platform used
+								in almost every software company). And Yes, UNT has a Git Lab!
+							</p>
+					</div>
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="talon_gitlab_intro.html">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
+						</div>
+					</div>
 					<br><br>
 					<!-- End Project -->
+
+
+					<!-- Start Project -->
+					<h1>Talon HPC Tutorial</h1>
+					<span class="separator">|</span>
+					<span>Intro to Word Embeddings - NLP Tools on Talon</span>
+					<div class="meta">
+						<span class="time">may 2, 2019</span>
+						<span class="toolstack">|University of North Texas </span>DP F223
+					</div>
+					<div class="description">
+						<p></p>
+						<p>Natural Language Processing on Talon HPC</p>
+							<p>Ever wondered or curious about natural language processing?
+								How do you load a text file, how do you 'clean' it, how do you
+								make use of it? We will learn all that and at the end you will
+								build a Neural Network model that can predict a sentiment of a
+								Movie Review. All this on Talon!</p>
+					</div>
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="talon_word_emb_intro.html">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
+						</div>
+					</div>
+					<br><br>
+					<!-- End Project -->
+
 
 					<!-- Start Project -->
           <h1>Talon HPC Tutorial</h1>
@@ -92,7 +122,6 @@
             <span class="time">may 1, 2019</span>
             <span class="toolstack">|University of North Texas </span>DP F223
           </div>
-
           <div class="description">
 						<p></p>
             <p>Hands on work on Talon UNT HPC</p>
@@ -102,7 +131,6 @@
 								environment, and most exciting build a simple Neural Network model
 								to predict diabetes! All this on Talon!</p>
           </div>
-
           <!-- Project Links -->
           <div class="links"id="links_3">
             <div class="website">
@@ -116,35 +144,32 @@
 					<!-- End Project -->
 
 					<!-- Start Project -->
-					<h1>Talon HPC Tutorial</h1>
-					<span class="separator">|</span>
-					<span>Intro to Word Embeddings - NLP Tools on Talon</span>
-					<div class="meta">
-						<span class="time">may 12, 2019</span>
-						<span class="toolstack">|University of North Texas </span>DP F223
-					</div>
-
-					<div class="description">
+          <h1>Talon HPC Workshop</h1>
+          <span class="separator">|</span>
+          <span>Machine Learning - Neural Networks on Talon</span>
+          <div class="meta">
+            <span class="time">november 30, 2018</span>
+            <span class="toolstack">|University of North Texas </span>GAB 535
+          </div>
+          <div class="description">
 						<p></p>
-						<p>Natural Language Processing on Talon HPC</p>
-							<p>Ever wondered or curious about natural language processing?
-								How do you load a text file, how do you 'clean' it, how do you
-								make use of it? We will learn all that and at the end you will
-								build a Neural Network model that can predict a sentiment of a
-								Movie Review. All this on Talon!</p>
-					</div>
-
-					<!-- Project Links -->
-					<div class="links"id="links_3">
-						<div class="website">
-							<a href="talon_word_emb_intro.html">view presentation</a>
-						</div
-						><div class="github">
-						<a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
-						</div>
-					</div>
+            <p>What are Neural Networks, and why everyone is talking about them?</p>
+							<p>This workshop is meant to give a general overview of why Neural Networks and Deep
+							Learning are getting so much attention and help shed some light on how they work and what
+							applications are possible because of them.</p>
+          </div>
+          <!-- Project Links -->
+          <div class="links"id="links_3">
+            <div class="website">
+              <a href="deep_learning_workshop.html">view presentation</a>
+            </div
+            ><div class="github">
+            <a href="https://github.com/gmihaila/unt_hpc">Talon on GitHub</a>
+            </div>
+          </div>
 					<br><br>
 					<!-- End Project -->
+
 
           </div>
         </div>
