--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>
-			404 | Mihai Dobri
+			404 | George Mihaila
 		</title>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -21,18 +21,18 @@
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
 
 		<!-- Page-specific stylesheets.  -->
-		
+
 			<link rel="stylesheet" type="text/css" href="/css/404.css">
-		
-		
+
+
 			<link rel="stylesheet" type="text/css" href="/css/header.css">
-		
-		
+
+
 
 		<!-- MathJax configuration. -->
-		
 
-		
+
+
 
 		<!-- Bill. -->
 		<script>
@@ -58,19 +58,19 @@
 		<![endif]-->
 
 		<div id="main">
-			
+
 				<div id="header">
-	<h2 id="maintitle">M.D.</h2>
+	<h2 id="maintitle">G.M.</h2>
 	<ul>
 		<li id="about"><a href="/">about</a></li>
 		<li id="projects"><a href="/projects">projects</a></li>
-		<li id="blog"><a href="/blog">blog</a></li>		
+		<li id="blog"><a href="/blog">blog</a></li>
 		<li id="cv"><a href="/cv/CV.pdf">cv</a></li>
-		<li id="contact"><a href="mailto:dobrimihai@yahoo.com">contact</a></li>
+		<li id="contact"><a href="georgemihaila@my.unt.edu">contact</a></li>
 	</ul>
 </div>
 
-			
+
 			<div class="error">
 	<span class="error">
 		puts
