--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<h1>George Mihaila</h1>
 								<p>Machine Learning - AI</p>
 								<p>PhD. Computer Science</p>
-								<p>University of North Texas</p>
+								<p>University of North Texas (UNT)</p>
 						</div>
 					</div>
 				</div>
@@ -77,16 +77,19 @@
 					<div id="right">
 						<h3 class="blog-title">Current position:</h3>
 						<p> Machine Learning - Data Science </br>
-						University of North Texas (UNT) - High Performance Computing</p>
+						UNT High Performance Computing Research Assistant</p>
 
 
 						<h3 class="blog-title">Latest Activity:</h3>
-						<p>Elected Vice President ACM - UNT branch &ensp;
-						<a href="https://unt.campuslabs.com/engage/organization/association-for-computing-machinery" class="fa fa-shield fa-rotate-180"></a></p>
+						<p>Workshops 3 day series on using UNT HPC &ensp;
+						<a href="file:///Users/georgemihaila/Documents/gmihaila.github.io/projects/projects.html" class="fa fa-cog fa-spin"></a></p>
 
 						<h3 class="blog-title">Current book reading:</h3>
-						<p>The Signal and the Noise by Nate Silver &ensp;
-						<a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087" class="fa fa-amazon"></a></p>
+						<p>07:07 - Andrei Lasc &ensp;
+							<a href="https://www.0707.ro" style="font-size:18px" class="fa fa-book"></a>
+							<!-- <a href="https://www.0707.ro" style="font-size:18px" class="fa">&#xf270;</a> -->
+						<!-- <a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087" class="fa fa-amazon"></a> -->
+						</p>
 
 					</div>
 
