--- a/projects/projects.html
+++ b/projects/projects.html
@@ -54,6 +54,32 @@
       <div id="projects">
         <div class="project">
 
+					<!-- Start Project -->
+					<h1>CHatbot</h1>
+					<span class="separator">|</span>
+					<span>Persona Chatbot</span>
+					<div class="meta">
+						<span class="time">may 8, 2019</span>
+						<span class="toolstack">|University of North Texas </span>DP
+					</div>
+					<div class="description">
+						<p></p>
+						<p>How to use UNT HPC GitLab server</p>
+							<p>
+							</p>
+					</div>
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="https://www.dropbox.com/s/11jmrwznma3fqmx/Chatbot_persona_George_Mihaila.pptx?dl=0">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/"></a>
+						</div>
+					</div>
+					<br><br>
+					<!-- End Project -->
+
 
 					<!-- Start Project -->
 					<h1>Talon HPC Tutorial</h1>
