--- a/projects/projects.html
+++ b/projects/projects.html
@@ -55,7 +55,7 @@
         <div class="project">
 
 					<!-- Start Project -->
-					<h1>CHatbot</h1>
+					<h1>Catbot</h1>
 					<span class="separator">|</span>
 					<span>Persona Chatbot</span>
 					<div class="meta">
@@ -64,7 +64,7 @@
 					</div>
 					<div class="description">
 						<p></p>
-						<p>How to use UNT HPC GitLab server</p>
+						<p></p>
 							<p>
 							</p>
 					</div>
