--- a/projects/projects.html
+++ b/projects/projects.html
@@ -55,7 +55,7 @@
         <div class="project">
 
 					<!-- Start Project -->
-					<h1>Catbot</h1>
+					<h1>Chatbot</h1>
 					<span class="separator">|</span>
 					<span>Persona Chatbot</span>
 					<div class="meta">
