--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 						<a href="file:///Users/georgemihaila/Documents/gmihaila.github.io/projects/projects.html" class="fa fa-cog fa-spin"></a></p>
 
 						<h3 class="blog-title">Current book reading:</h3>
-						<p>07:07 - Andrei Lasc &ensp;
-							<a href="https://www.0707.ro" style="font-size:18px" class="fa fa-book"></a>
+						<p>Rich Dad Poor Dad - Robert T. Kiyosaki &ensp;
+							<a href="https://www.amazon.com/Rich-Dad-Poor-Teach-Middle-ebook/dp/B0175P82RA" style="font-size:18px" class="fa fa-book"></a>
 							<!-- <a href="https://www.0707.ro" style="font-size:18px" class="fa">&#xf270;</a> -->
 						<!-- <a href="https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but/dp/0143125087" class="fa fa-amazon"></a> -->
 						</p>
