--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
 						<h3 class="blog-title">Latest Activity:</h3>
-						<p>Workshops 3 day series on using UNT HPC &ensp;
+						<p>Machine Learning Engineer at State Farm &ensp;
 						<a href="file:///Users/georgemihaila/Documents/gmihaila.github.io/projects/projects.html" class="fa fa-cog fa-spin"></a></p>
 
 						<h3 class="blog-title">Current book reading:</h3>
