--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div id="about">
 					<div id="right">
 						<h3 class="blog-title">Current position:</h3>
-						<p> Machine Learning - Data Science </br>
+						<p> Machine Learning Engineer & Data Scientist </br>
 						UNT High Performance Computing Research Assistant</p>
 
 
