--- a/projects/projects.html
+++ b/projects/projects.html
@@ -55,6 +55,33 @@
         <div class="project">
 
 					<!-- Start Project -->
+					<h1>GPU Technology Conference(GTC)</h1>
+					<span class="separator">|</span>
+					<span>GPUs in NLP</span>
+					<div class="meta">
+						<span class="time">march 22-26, 2020</span>
+						<span class="toolstack">|San Jose </span>California
+					</div>
+					<div class="description">
+						<p></p>
+						<p>GTC GPu Technology</p>
+							<p>The main purpose of this tutorial is to target a particular Natural Language Processing (NLP)
+								problem, in this case Sentiment Analysis, and use GPUs for great speedup.
+							</p>
+					</div>
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="gtc2020.html">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/gtc2020_instructor_training"></a>
+						</div>
+					</div>
+					<br><br>
+					<!-- End Project -->
+
+					<!-- Start Project -->
 					<h1>Chatbot</h1>
 					<span class="separator">|</span>
 					<span>Persona Chatbot</span>
