--- a/projects/projects.html
+++ b/projects/projects.html
@@ -75,7 +75,38 @@
 							<a href="gtc2020.html">view presentation</a>
 						</div
 						><div class="github">
-						<a href="https://github.com/gmihaila/gtc2020_instructor_training"></a>
+						<a href="https://github.com/gmihaila/gtc2020_instructor_training">code project</a>
+						</div>
+					</div>
+					<br><br>
+					<!-- End Project -->
+
+					<!-- Start Project -->
+					<h1>Talon HPC Tutorial</h1>
+					<span class="separator">|</span>
+					<span>Find New Sentiments in Text Data</span>
+					<div class="meta">
+						<span class="time">march 03, 2020</span>
+						<span class="toolstack">|University of North Texas </span>DP F223
+					</div>
+					<div class="description">
+						<p></p>
+						<p>Using text embedding and clustering methods to find new sentiments in text data.</p>
+							<p>
+								Use imdb movie reviews dataset and see how positive-negative sentiments can be used to find other sentiments.<br>
+								Use Tensorflow 2, Word Embeddings, Contextual Embeddings.<br>
+								We'll do clustering and find best number of cluster in data we don't know anything about.<br>
+								We'll do pretty plots to interpret results!<br>
+								We'll do all this on our UNT Talon Supercomputer!<br>
+							</p>
+					</div>
+					<!-- Project Links -->
+					<div class="links"id="links_3">
+						<div class="website">
+							<a href="find_new_sentiment.html">view presentation</a>
+						</div
+						><div class="github">
+						<a href="https://github.com/gmihaila/unt_hpc/tree/master/workshops/march_3_2019">code project</a>
 						</div>
 					</div>
 					<br><br>
@@ -101,7 +132,7 @@
 							<a href="https://www.dropbox.com/s/6f5ryl7w5aq2adl/Chatbot_persona_George_Mihaila.pptx?dl=0">view presentation</a>
 						</div
 						><div class="github">
-						<a href="https://github.com/gmihaila/"></a>
+						<a href="https://github.com/gmihaila/">code project</a>
 						</div>
 					</div>
 					<br><br>
