Updates to Website

--- a/tutorial_notebooks/pretrain_transformers_pytorch/index.html
+++ b/tutorial_notebooks/pretrain_transformers_pytorch/index.html
@@ -645,6 +645,7 @@
 <p><strong>Disclaimer:</strong> <em>The format of this tutorial notebook is very similar with my other tutorial notebooks. This is done intentionally in order to keep readers familiar with my format.</em></p>
 <p><br></p>
 <p>This notebook is used to pretrain transformers models using <a href="https://huggingface.co/transformers/">Huggingface</a> on your own custom dataset.</p>
+<p><strong>What do I mean by <em>pretrain transformers</em>? The <a href="https://www.merriam-webster.com/dictionary/pretraining">definition of pretraining</a> is <em>to train in advance</em>. That is exactly what I mean! Train a transformer model to use it as a pretrained transformers model which can be used to fine-tune it on a specific task!</strong></p>
 <p>With the AutoClasses functionality we can reuse the code on a large number of transformers models!</p>
 <p>This notebook is designed to:</p>
 <ul>
