Updates to Website

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 <p><img alt="george_handsome" src="images/georgem.jpeg" /></p>
 <p>George is a PhD candidate at University of North Texas, in the Department of Computer Science. He received his bachelor’s degree in Electrical Engineering in his home-country, Romania, and he got his master’s degree in Computer Science in the United States. </p>
 <p>He worked three summers for State Farm as a Data Scientist (DS) and Machine Learning (ML) Engineer, and two years combined of DS and ML Engineer for the University of north Texas High Performance Computing center. He has more than 5 years of combined experience in Natural Language Processing (NLP), Computer Vision (CV), Deep Learning (DL), Reinforcement Learning (RL) and Machine Learning Operations (MLOps).</p>
-<p>He was the technical reviewer for the book <strong>Transformers for Natural Language Processing</strong>. This was the <strong>first book</strong> to be published on Transformers model architecture for NLP.</p>
+<p>He was the technical reviewer for the book <strong>Transformers for Natural Language Processing</strong> by <em>Denis Rothman</em>. This was the <strong>first book</strong> to be published on Transformers model architecture for NLP.</p>
 <p>He is currently working towards his doctoral thesis in casual dialog generation with persona.</p>
 <p>In his free time George likes to work on AI related tutorials and projects.</p>
 <p><strong>Competencies:</strong> <em>data science, machine learning, deep learning, high performance computing, mlops, Tensorflow2.0+, PyTorch, Python, R.</em></p>
