Updates to Website

--- a/tutorial_notebooks/gpt2_finetune_classification/index.html
+++ b/tutorial_notebooks/gpt2_finetune_classification/index.html
@@ -734,7 +734,7 @@ max_length - Pad or truncate text sequences to a specific length. I will set it 
 <span class="c1"># Set seed for reproducibility.</span>
 <span class="n">set_seed</span><span class="p">(</span><span class="mi">123</span><span class="p">)</span>
 
-<span class="c1"># Number of training epochs (authors recommend between 2 and 4).</span>
+<span class="c1"># Number of training epochs (authors on fine-tuning Bert recommend between 2 and 4).</span>
 <span class="n">epochs</span> <span class="o">=</span> <span class="mi">4</span>
 
 <span class="c1"># Number of batches - depending on the max sequence length and GPU memory.</span>
