Updates to Website

--- a/activities/discuss_nlp/slides/index.html
+++ b/activities/discuss_nlp/slides/index.html
@@ -508,7 +508,7 @@ img[alt~="center"] {
 <li>It's based on open-source.</li>
 <li>Was founded in 2016 by Clement Delangue, Julien Chaumond, Thomas Wolf.</li>
 <li>Contains thousands of language models on 22 tasks.</li>
-<li>Most model implementations come in Tensroflow 2 and PyTorch.</li>
+<li>Most model implementations come in TensorFlow 2 and PyTorch.</li>
 <li>Contains 449+ datasets on various NLP tasks.</li>
 <li>Let's check it out <a href="https://huggingface.co">huggingface.co</a>.</li>
 </ul>
